java/src/org/sc/grammars/OntoParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Onto.g 2010-12-16 11:19:21
 
package org.sc.grammars;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class OntoParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DEFINE", "ASSERT", "TRIPLES", "SOME", "ONLY", "VALUE", "WHERE", "TABLE", "ALIAS", "PRFX", "IMPORT", "COLON", "TAB", "QUOTE", "DOLLAR", "AT", "WS", "LITERAL", "VAR", "QUOTED", "PREFIXED", "NEWLINE", "PREFIX", "LETTER", "DIGIT"
    };
    public static final int EOF=-1;
    public static final int DEFINE=4;
    public static final int ASSERT=5;
    public static final int TRIPLES=6;
    public static final int SOME=7;
    public static final int ONLY=8;
    public static final int VALUE=9;
    public static final int WHERE=10;
    public static final int TABLE=11;
    public static final int ALIAS=12;
    public static final int PRFX=13;
    public static final int IMPORT=14;
    public static final int COLON=15;
    public static final int TAB=16;
    public static final int QUOTE=17;
    public static final int DOLLAR=18;
    public static final int AT=19;
    public static final int WS=20;
    public static final int LITERAL=21;
    public static final int VAR=22;
    public static final int QUOTED=23;
    public static final int PREFIXED=24;
    public static final int NEWLINE=25;
    public static final int PREFIX=26;
    public static final int LETTER=27;
    public static final int DIGIT=28;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "innerline", "triples", "assertline", "defineline", 
        "triple_entry", "prefixline", "tableline", "template", "classline", 
        "singleline", "restrictline", "headline", "eol", "statement", "name", 
        "importline"
    };
    public static final boolean[] decisionCanBacktrack = new boolean[] {
        false, // invalid decision
        false, false, false, false, false, false, false, false, false, false, 
            false, false, false, false
    };

     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public OntoParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public OntoParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public OntoParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return OntoParser.tokenNames; }
    public String getGrammarFileName() { return "Onto.g"; }


    public static class template_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "template"
    // Onto.g:34:1: template : ( eol )? ( statement )* EOF ;
    public final OntoParser.template_return template() throws RecognitionException {
        OntoParser.template_return retval = new OntoParser.template_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF3=null;
        OntoParser.eol_return eol1 = null;

        OntoParser.statement_return statement2 = null;


        Object EOF3_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "template");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(34, 1);

        try {
            // Onto.g:34:10: ( ( eol )? ( statement )* EOF )
            dbg.enterAlt(1);

            // Onto.g:34:12: ( eol )? ( statement )* EOF
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(34,12);
            // Onto.g:34:12: ( eol )?
            int alt1=2;
            try { dbg.enterSubRule(1);
            try { dbg.enterDecision(1, decisionCanBacktrack[1]);

            int LA1_0 = input.LA(1);

            if ( (LA1_0==WS||LA1_0==NEWLINE) ) {
                alt1=1;
            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // Onto.g:34:12: eol
                    {
                    dbg.location(34,12);
                    pushFollow(FOLLOW_eol_in_template214);
                    eol1=eol();

                    state._fsp--;

                    adaptor.addChild(root_0, eol1.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(1);}

            dbg.location(34,17);
            // Onto.g:34:17: ( statement )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=DEFINE && LA2_0<=ASSERT)||LA2_0==TABLE||(LA2_0>=PRFX && LA2_0<=IMPORT)) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Onto.g:34:17: statement
            	    {
            	    dbg.location(34,17);
            	    pushFollow(FOLLOW_statement_in_template217);
            	    statement2=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, statement2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(34,28);
            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_template220); 
            EOF3_tree = (Object)adaptor.create(EOF3);
            adaptor.addChild(root_0, EOF3_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(34, 32);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "template");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "template"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // Onto.g:36:1: statement : ( headline eol ( triples )? ( ( TAB )+ innerline eol )* | singleline eol );
    public final OntoParser.statement_return statement() throws RecognitionException {
        OntoParser.statement_return retval = new OntoParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TAB7=null;
        OntoParser.headline_return headline4 = null;

        OntoParser.eol_return eol5 = null;

        OntoParser.triples_return triples6 = null;

        OntoParser.innerline_return innerline8 = null;

        OntoParser.eol_return eol9 = null;

        OntoParser.singleline_return singleline10 = null;

        OntoParser.eol_return eol11 = null;


        Object TAB7_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(36, 1);

        try {
            // Onto.g:37:5: ( headline eol ( triples )? ( ( TAB )+ innerline eol )* | singleline eol )
            int alt6=2;
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=DEFINE && LA6_0<=ASSERT)||LA6_0==TABLE) ) {
                alt6=1;
            }
            else if ( ((LA6_0>=PRFX && LA6_0<=IMPORT)) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // Onto.g:37:7: headline eol ( triples )? ( ( TAB )+ innerline eol )*
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(37,7);
                    pushFollow(FOLLOW_headline_in_statement235);
                    headline4=headline();

                    state._fsp--;

                    adaptor.addChild(root_0, headline4.getTree());
                    dbg.location(37,16);
                    pushFollow(FOLLOW_eol_in_statement237);
                    eol5=eol();

                    state._fsp--;

                    adaptor.addChild(root_0, eol5.getTree());
                    dbg.location(37,20);
                    // Onto.g:37:20: ( triples )?
                    int alt3=2;
                    try { dbg.enterSubRule(3);
                    try { dbg.enterDecision(3, decisionCanBacktrack[3]);

                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==TAB) ) {
                        int LA3_1 = input.LA(2);

                        if ( (LA3_1==TRIPLES) ) {
                            alt3=1;
                        }
                    }
                    } finally {dbg.exitDecision(3);}

                    switch (alt3) {
                        case 1 :
                            dbg.enterAlt(1);

                            // Onto.g:37:20: triples
                            {
                            dbg.location(37,20);
                            pushFollow(FOLLOW_triples_in_statement239);
                            triples6=triples();

                            state._fsp--;

                            adaptor.addChild(root_0, triples6.getTree());

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(3);}

                    dbg.location(37,29);
                    // Onto.g:37:29: ( ( TAB )+ innerline eol )*
                    try { dbg.enterSubRule(5);

                    loop5:
                    do {
                        int alt5=2;
                        try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==TAB) ) {
                            alt5=1;
                        }


                        } finally {dbg.exitDecision(5);}

                        switch (alt5) {
                    	case 1 :
                    	    dbg.enterAlt(1);

                    	    // Onto.g:37:30: ( TAB )+ innerline eol
                    	    {
                    	    dbg.location(37,30);
                    	    // Onto.g:37:30: ( TAB )+
                    	    int cnt4=0;
                    	    try { dbg.enterSubRule(4);

                    	    loop4:
                    	    do {
                    	        int alt4=2;
                    	        try { dbg.enterDecision(4, decisionCanBacktrack[4]);

                    	        int LA4_0 = input.LA(1);

                    	        if ( (LA4_0==TAB) ) {
                    	            alt4=1;
                    	        }


                    	        } finally {dbg.exitDecision(4);}

                    	        switch (alt4) {
                    	    	case 1 :
                    	    	    dbg.enterAlt(1);

                    	    	    // Onto.g:37:30: TAB
                    	    	    {
                    	    	    dbg.location(37,30);
                    	    	    TAB7=(Token)match(input,TAB,FOLLOW_TAB_in_statement243); 
                    	    	    TAB7_tree = (Object)adaptor.create(TAB7);
                    	    	    adaptor.addChild(root_0, TAB7_tree);


                    	    	    }
                    	    	    break;

                    	    	default :
                    	    	    if ( cnt4 >= 1 ) break loop4;
                    	                EarlyExitException eee =
                    	                    new EarlyExitException(4, input);
                    	                dbg.recognitionException(eee);

                    	                throw eee;
                    	        }
                    	        cnt4++;
                    	    } while (true);
                    	    } finally {dbg.exitSubRule(4);}

                    	    dbg.location(37,35);
                    	    pushFollow(FOLLOW_innerline_in_statement246);
                    	    innerline8=innerline();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, innerline8.getTree());
                    	    dbg.location(37,45);
                    	    pushFollow(FOLLOW_eol_in_statement248);
                    	    eol9=eol();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, eol9.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);
                    } finally {dbg.exitSubRule(5);}


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // Onto.g:38:7: singleline eol
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(38,7);
                    pushFollow(FOLLOW_singleline_in_statement259);
                    singleline10=singleline();

                    state._fsp--;

                    adaptor.addChild(root_0, singleline10.getTree());
                    dbg.location(38,18);
                    pushFollow(FOLLOW_eol_in_statement261);
                    eol11=eol();

                    state._fsp--;

                    adaptor.addChild(root_0, eol11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(39, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "statement"

    public static class triples_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "triples"
    // Onto.g:41:1: triples : TAB TRIPLES eol ( TAB TAB triple_entry eol )+ ;
    public final OntoParser.triples_return triples() throws RecognitionException {
        OntoParser.triples_return retval = new OntoParser.triples_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TAB12=null;
        Token TRIPLES13=null;
        Token TAB15=null;
        Token TAB16=null;
        OntoParser.eol_return eol14 = null;

        OntoParser.triple_entry_return triple_entry17 = null;

        OntoParser.eol_return eol18 = null;


        Object TAB12_tree=null;
        Object TRIPLES13_tree=null;
        Object TAB15_tree=null;
        Object TAB16_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "triples");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(41, 1);

        try {
            // Onto.g:42:2: ( TAB TRIPLES eol ( TAB TAB triple_entry eol )+ )
            dbg.enterAlt(1);

            // Onto.g:42:4: TAB TRIPLES eol ( TAB TAB triple_entry eol )+
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(42,4);
            TAB12=(Token)match(input,TAB,FOLLOW_TAB_in_triples277); 
            TAB12_tree = (Object)adaptor.create(TAB12);
            adaptor.addChild(root_0, TAB12_tree);

            dbg.location(42,8);
            TRIPLES13=(Token)match(input,TRIPLES,FOLLOW_TRIPLES_in_triples279); 
            TRIPLES13_tree = (Object)adaptor.create(TRIPLES13);
            adaptor.addChild(root_0, TRIPLES13_tree);

            dbg.location(42,16);
            pushFollow(FOLLOW_eol_in_triples281);
            eol14=eol();

            state._fsp--;

            adaptor.addChild(root_0, eol14.getTree());
            dbg.location(42,20);
            // Onto.g:42:20: ( TAB TAB triple_entry eol )+
            int cnt7=0;
            try { dbg.enterSubRule(7);

            loop7:
            do {
                int alt7=2;
                try { dbg.enterDecision(7, decisionCanBacktrack[7]);

                int LA7_0 = input.LA(1);

                if ( (LA7_0==TAB) ) {
                    int LA7_1 = input.LA(2);

                    if ( (LA7_1==TAB) ) {
                        int LA7_3 = input.LA(3);

                        if ( ((LA7_3>=LITERAL && LA7_3<=PREFIXED)) ) {
                            int LA7_4 = input.LA(4);

                            if ( (LA7_4==WS) ) {
                                int LA7_5 = input.LA(5);

                                if ( ((LA7_5>=LITERAL && LA7_5<=PREFIXED)) ) {
                                    alt7=1;
                                }


                            }


                        }


                    }


                }


                } finally {dbg.exitDecision(7);}

                switch (alt7) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Onto.g:42:21: TAB TAB triple_entry eol
            	    {
            	    dbg.location(42,21);
            	    TAB15=(Token)match(input,TAB,FOLLOW_TAB_in_triples284); 
            	    TAB15_tree = (Object)adaptor.create(TAB15);
            	    adaptor.addChild(root_0, TAB15_tree);

            	    dbg.location(42,25);
            	    TAB16=(Token)match(input,TAB,FOLLOW_TAB_in_triples286); 
            	    TAB16_tree = (Object)adaptor.create(TAB16);
            	    adaptor.addChild(root_0, TAB16_tree);

            	    dbg.location(42,29);
            	    pushFollow(FOLLOW_triple_entry_in_triples288);
            	    triple_entry17=triple_entry();

            	    state._fsp--;

            	    adaptor.addChild(root_0, triple_entry17.getTree());
            	    dbg.location(42,42);
            	    pushFollow(FOLLOW_eol_in_triples290);
            	    eol18=eol();

            	    state._fsp--;

            	    adaptor.addChild(root_0, eol18.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt7++;
            } while (true);
            } finally {dbg.exitSubRule(7);}


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(42, 48);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "triples");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "triples"

    public static class triple_entry_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "triple_entry"
    // Onto.g:44:1: triple_entry : name WS name WS name ;
    public final OntoParser.triple_entry_return triple_entry() throws RecognitionException {
        OntoParser.triple_entry_return retval = new OntoParser.triple_entry_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token WS20=null;
        Token WS22=null;
        OntoParser.name_return name19 = null;

        OntoParser.name_return name21 = null;

        OntoParser.name_return name23 = null;


        Object WS20_tree=null;
        Object WS22_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "triple_entry");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(44, 1);

        try {
            // Onto.g:44:14: ( name WS name WS name )
            dbg.enterAlt(1);

            // Onto.g:44:16: name WS name WS name
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(44,16);
            pushFollow(FOLLOW_name_in_triple_entry303);
            name19=name();

            state._fsp--;

            adaptor.addChild(root_0, name19.getTree());
            dbg.location(44,21);
            WS20=(Token)match(input,WS,FOLLOW_WS_in_triple_entry305); 
            WS20_tree = (Object)adaptor.create(WS20);
            adaptor.addChild(root_0, WS20_tree);

            dbg.location(44,24);
            pushFollow(FOLLOW_name_in_triple_entry307);
            name21=name();

            state._fsp--;

            adaptor.addChild(root_0, name21.getTree());
            dbg.location(44,29);
            WS22=(Token)match(input,WS,FOLLOW_WS_in_triple_entry309); 
            WS22_tree = (Object)adaptor.create(WS22);
            adaptor.addChild(root_0, WS22_tree);

            dbg.location(44,32);
            pushFollow(FOLLOW_name_in_triple_entry311);
            name23=name();

            state._fsp--;

            adaptor.addChild(root_0, name23.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(44, 37);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "triple_entry");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "triple_entry"

    public static class singleline_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "singleline"
    // Onto.g:46:1: singleline : ( importline | prefixline );
    public final OntoParser.singleline_return singleline() throws RecognitionException {
        OntoParser.singleline_return retval = new OntoParser.singleline_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        OntoParser.importline_return importline24 = null;

        OntoParser.prefixline_return prefixline25 = null;



        try { dbg.enterRule(getGrammarFileName(), "singleline");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(46, 1);

        try {
            // Onto.g:47:5: ( importline | prefixline )
            int alt8=2;
            try { dbg.enterDecision(8, decisionCanBacktrack[8]);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==IMPORT) ) {
                alt8=1;
            }
            else if ( (LA8_0==PRFX) ) {
                alt8=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // Onto.g:47:7: importline
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(47,7);
                    pushFollow(FOLLOW_importline_in_singleline326);
                    importline24=importline();

                    state._fsp--;

                    adaptor.addChild(root_0, importline24.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // Onto.g:48:7: prefixline
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(48,7);
                    pushFollow(FOLLOW_prefixline_in_singleline335);
                    prefixline25=prefixline();

                    state._fsp--;

                    adaptor.addChild(root_0, prefixline25.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(49, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "singleline");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "singleline"

    public static class headline_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "headline"
    // Onto.g:51:1: headline : ( defineline | assertline | tableline );
    public final OntoParser.headline_return headline() throws RecognitionException {
        OntoParser.headline_return retval = new OntoParser.headline_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        OntoParser.defineline_return defineline26 = null;

        OntoParser.assertline_return assertline27 = null;

        OntoParser.tableline_return tableline28 = null;



        try { dbg.enterRule(getGrammarFileName(), "headline");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(51, 1);

        try {
            // Onto.g:52:5: ( defineline | assertline | tableline )
            int alt9=3;
            try { dbg.enterDecision(9, decisionCanBacktrack[9]);

            switch ( input.LA(1) ) {
            case DEFINE:
                {
                alt9=1;
                }
                break;
            case ASSERT:
                {
                alt9=2;
                }
                break;
            case TABLE:
                {
                alt9=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);

                    // Onto.g:52:7: defineline
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(52,7);
                    pushFollow(FOLLOW_defineline_in_headline353);
                    defineline26=defineline();

                    state._fsp--;

                    adaptor.addChild(root_0, defineline26.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // Onto.g:53:7: assertline
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(53,7);
                    pushFollow(FOLLOW_assertline_in_headline362);
                    assertline27=assertline();

                    state._fsp--;

                    adaptor.addChild(root_0, assertline27.getTree());

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // Onto.g:54:7: tableline
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(54,7);
                    pushFollow(FOLLOW_tableline_in_headline371);
                    tableline28=tableline();

                    state._fsp--;

                    adaptor.addChild(root_0, tableline28.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(55, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "headline");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "headline"

    public static class innerline_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "innerline"
    // Onto.g:57:1: innerline : ( defineline | assertline | classline | restrictline );
    public final OntoParser.innerline_return innerline() throws RecognitionException {
        OntoParser.innerline_return retval = new OntoParser.innerline_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        OntoParser.defineline_return defineline29 = null;

        OntoParser.assertline_return assertline30 = null;

        OntoParser.classline_return classline31 = null;

        OntoParser.restrictline_return restrictline32 = null;



        try { dbg.enterRule(getGrammarFileName(), "innerline");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(57, 1);

        try {
            // Onto.g:58:5: ( defineline | assertline | classline | restrictline )
            int alt10=4;
            try { dbg.enterDecision(10, decisionCanBacktrack[10]);

            switch ( input.LA(1) ) {
            case DEFINE:
                {
                alt10=1;
                }
                break;
            case ASSERT:
                {
                alt10=2;
                }
                break;
            case LITERAL:
            case VAR:
            case QUOTED:
            case PREFIXED:
                {
                int LA10_3 = input.LA(2);

                if ( (LA10_3==WS) ) {
                    int LA10_4 = input.LA(3);

                    if ( ((LA10_4>=SOME && LA10_4<=VALUE)) ) {
                        alt10=4;
                    }
                    else if ( (LA10_4==NEWLINE) ) {
                        alt10=3;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 10, 4, input);

                        dbg.recognitionException(nvae);
                        throw nvae;
                    }
                }
                else if ( (LA10_3==NEWLINE) ) {
                    alt10=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 10, 3, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 10, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(10);}

            switch (alt10) {
                case 1 :
                    dbg.enterAlt(1);

                    // Onto.g:58:7: defineline
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(58,7);
                    pushFollow(FOLLOW_defineline_in_innerline390);
                    defineline29=defineline();

                    state._fsp--;

                    adaptor.addChild(root_0, defineline29.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // Onto.g:59:7: assertline
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(59,7);
                    pushFollow(FOLLOW_assertline_in_innerline398);
                    assertline30=assertline();

                    state._fsp--;

                    adaptor.addChild(root_0, assertline30.getTree());

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // Onto.g:60:7: classline
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(60,7);
                    pushFollow(FOLLOW_classline_in_innerline406);
                    classline31=classline();

                    state._fsp--;

                    adaptor.addChild(root_0, classline31.getTree());

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // Onto.g:61:7: restrictline
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(61,7);
                    pushFollow(FOLLOW_restrictline_in_innerline414);
                    restrictline32=restrictline();

                    state._fsp--;

                    adaptor.addChild(root_0, restrictline32.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);
